# cold_expanding_fluids

./: README.md  grid_solver.py  progress_timer.py  utils.py
kinetic_theory/: Cargo.toml  README.md  main.py  setup.py  tests.py
kinetic_theory/particles/: particles.cp38-win_amd64.pyd  particles.cp39-win_amd64.pyd  particles.pyd
kinetic_theory/src/: constants.rs  lib.rs  particles.rs  prelude.rs  utils.rs  vec3.rs
kinetic_theory/src/old/: cluster.rs  clustered_particle_system.rs  main.rs  particle.rs  particle_system.rs  utils.rs  vec3.rs
superfluid/: generate_data.py  main.py
