[package]
name = "particles"
version = "0.1.0"
authors = ["Lars Kue <lars@kuehmichel.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "particles"
# create a pyd file output for use with python
crate-type = ["cdylib", "rlib"]

[dependencies]
derive_more = "^0.99.9"
itertools = "^0.9.0"
rayon = "^1.4.0"

[dependencies.serde]
version = "^1.0.114"
features = ["derive"]

[dependencies.pyo3]
version = "^0.12.1"
features = ["extension-module"]

